--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
       "start": "node app.js",
-      "serve": "cross-env NODE_ENV=development nodemon app.js"
+      "serve": "nodemon app.js"
     },
     "author": "Alexandr Koshelev",
     "license": "ISC",
