--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
